force-app/main/default/objects/Opportunity/fields/Legacy_Department__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Department__c</fullName>
    <description>Tab name from data migration</description>
    <label>Legacy Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brands US</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Brands UK</fullName>
            </value>
            <value>
                <fullName>Brands Mid East</fullName>
            </value>
            <value>
                <fullName>Exp US</fullName>
            </value>
            <value>
                <fullName>Exp EMEA</fullName>
            </value>
            <value>
                <fullName>Events Hosp</fullName>
            </value>
            <value>
                <fullName>Prop US</fullName>
            </value>
            <value>
                <fullName>Prop Intl</fullName>
            </value>
            <value>
                <fullName>Prop Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>