force-app/main/default/objects/Opportunity/fields/Lock_Status__c.field-meta.xml
<CustomField>
    <fullName>Lock_Status__c</fullName>
    <formula>IF( Record_Locked__c , IMAGE(&quot;/servlet/servlet.FileDownload?file=0151I0000082wVa&quot;, &quot;Locked&quot;),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lock Status</label>
    <type>Text</type>
</CustomField>