force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <inlineHelpText>Reasoning for why we lost campaign</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor (Breadth of Offering / Scale)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor (Experience Level)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor (Quality of Ideas / Creative)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor (Strength of Relationship)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor (Value/Pricing)</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Client/Agent Declined</fullName>
            </value>
            <value>
                <fullName>Bad Timing</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Brand Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Client Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>