force-app/main/default/objects/Opportunity/fields/Loss_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Other__c</fullName>
    <label>Loss Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>