force-app/main/default/objects/Opportunity/fields/Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lost_Amount__c</fullName>
    <formula>IF( TEXT(StageName) = &quot;Closed Lost&quot;, Current_Year_Revenue__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>