force-app/main/default/objects/Opportunity/fields/LS_Cycle_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>LS_Cycle_Product_Count__c</fullName>
    <description>Count of LS/Cycle Products for Email Alert</description>
    <label>LS / Cycle Product Count</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Department__c</field>
        <operation>equals</operation>
        <value>LS / Cycle</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>