force-app/main/default/objects/Opportunity/fields/LS_Cycle_Products__c.field-meta.xml
<CustomField>
    <fullName>LS_Cycle_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this opportunity contain LS / Cycle Products</description>
    <label>LS / Cycle Products</label>
    <type>Checkbox</type>
</CustomField>