force-app/main/default/objects/Opportunity/fields/Manager_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Address__c</fullName>
    <description>This is a formula field for Process Builder: Copy Manager
This Field Auto Populates User Manager Email Address in User info</description>
    <formula>Owner.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Email Address</label>
    <type>Text</type>
</CustomField>