force-app/main/default/objects/Opportunity/fields/Manager_Email_Address_Copy__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Address_Copy__c</fullName>
    <description>Referenced from the Manager Email Address Formula Field.
Related to Process Builder: Copy Manager

It pulls the info from field: Manager Email Address Copy</description>
    <label>Manager Email Address Copy</label>
    <type>Email</type>
</CustomField>