force-app/main/default/objects/Opportunity/fields/Margin_Approved__c.field-meta.xml
<CustomField>
    <fullName>Margin_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if Opportunity Margin has been formally approved.</description>
    <label>Margin Approved</label>
    <type>Checkbox</type>
</CustomField>