force-app/main/default/objects/Opportunity/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Media will be needed on this opportunity</description>
    <inlineHelpText>Select if Media team is needed based on campaign objectives</inlineHelpText>
    <label>Media</label>
    <type>Checkbox</type>
</CustomField>