force-app/main/default/objects/Opportunity/fields/Media_Notes__c.field-meta.xml
<CustomField>
    <fullName>Media_Notes__c</fullName>
    <label>Media Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>