force-app/main/default/objects/Opportunity/fields/Migration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Migration_Notes__c</fullName>
    <label>Migration Notes</label>
    <type>TextArea</type>
</CustomField>