force-app/main/default/objects/Opportunity/fields/Missing_Prefix_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Missing_Prefix_Customer_ID__c</fullName>
    <formula>AND
(Record_Locked__c,
(OR
(ISBLANK(WD_Customer_ID__c),ISBLANK(Account_Prefix__c), WD_Customer_ID__c = &apos;Lead Account&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing Prefix Customer ID</label>
    <type>Checkbox</type>
</CustomField>