force-app/main/default/objects/Opportunity/fields/Negotiation_Datestamp__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Datestamp__c</fullName>
    <description>Date Negotiation Stage is reached</description>
    <label>Negotiation Datestamp</label>
    <type>Date</type>
</CustomField>