force-app/main/default/objects/Opportunity/fields/Next_Follow_Up_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_Up_Deliverable__c</fullName>
    <description>Start Project Email template body</description>
    <inlineHelpText>List requested team meeting date, production timeline, pre-pro, shoot, post.</inlineHelpText>
    <label>Next Follow Up / Deliverable</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>