force-app/main/default/objects/Opportunity/fields/non_edu_Email__c.field-meta.xml
<CustomField>
    <fullName>non_edu_Email__c</fullName>
    <formula>Contact__r.Secondary_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>non.edu Email</label>
    <type>Text</type>
</CustomField>