force-app/main/default/objects/Opportunity/fields/Non_terminated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_terminated_Amount__c</fullName>
    <label>Non-terminated Amount</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name_text__c</field>
        <operation>notEqual</operation>
        <value>Termination</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>