force-app/main/default/objects/Opportunity/fields/Onboarding_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Initiated</label>
    <type>Checkbox</type>
</CustomField>