force-app/main/default/objects/Opportunity/fields/Onboarding_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Initiated_Date__c</fullName>
    <label>Onboarding Initiated Date</label>
    <type>Date</type>
</CustomField>