force-app/main/default/objects/Opportunity/fields/Opportunity_Identified_Datestamp__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Identified_Datestamp__c</fullName>
    <description>Date Opportunity Identified Stage is reached</description>
    <label>Opportunity Identified Datestamp</label>
    <type>Date</type>
</CustomField>