force-app/main/default/objects/Opportunity/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <label>Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Applicant</fullName>
            </value>
            <value>
                <fullName>Interview Requested</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Interview Completed</fullName>
            </value>
            <value>
                <fullName>Still considering other candidates</fullName>
            </value>
            <value>
                <fullName>Program Lead Approval Pending</fullName>
            </value>
            <value>
                <fullName>Client Approval Pending</fullName>
                <label>Client approval pending</label>
            </value>
            <value>
                <fullName>Other: See Notes</fullName>
            </value>
            <value>
                <fullName>Approved Student awaiting Contract</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Contract Opened</fullName>
            </value>
            <value>
                <fullName>Contract Signed / Closed Won</fullName>
            </value>
            <value>
                <fullName>Background Check Completed (FAIL)</fullName>
                <isActive>false</isActive>
                <label>Background Check Completed (FAIL)</label>
            </value>
            <value>
                <fullName>Background Check Completed (PASS)</fullName>
                <isActive>false</isActive>
                <label>Background Check Completed (PASS)</label>
            </value>
            <value>
                <fullName>Background Check Initiated</fullName>
                <isActive>false</isActive>
                <label>Background Check Initiated</label>
            </value>
            <value>
                <fullName>Background Check Requested</fullName>
                <isActive>false</isActive>
                <label>Background Check Requested</label>
            </value>
            <value>
                <fullName>Client services reviewing</fullName>
                <isActive>false</isActive>
                <label>Client services reviewing</label>
            </value>
            <value>
                <fullName>Commitment Form Sent</fullName>
                <isActive>false</isActive>
                <label>Commitment Form Sent</label>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
                <isActive>false</isActive>
                <label>Contract Signed</label>
            </value>
            <value>
                <fullName>Decision Pending</fullName>
                <isActive>false</isActive>
                <label>Decision Pending</label>
            </value>
            <value>
                <fullName>Encore Request Initiated</fullName>
                <isActive>false</isActive>
                <label>Encore Request Initiated</label>
            </value>
            <value>
                <fullName>Keeping as backup if other candidate declines offer</fullName>
                <isActive>false</isActive>
                <label>Keeping as backup if other candidate declines offer</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other Opportunities</fullName>
                <isActive>false</isActive>
                <label>Other Opportunities</label>
            </value>
            <value>
                <fullName>Pre-Contract Ready</fullName>
                <isActive>false</isActive>
                <label>Pre-Contract Ready</label>
            </value>
            <value>
                <fullName>Pre-Contract Sent</fullName>
                <isActive>false</isActive>
                <label>Pre-Contract Sent</label>
            </value>
            <value>
                <fullName>Student Status</fullName>
                <isActive>false</isActive>
                <label>Student Status</label>
            </value>
            <value>
                <fullName>Student qualifications</fullName>
                <isActive>false</isActive>
                <label>Student qualifications</label>
            </value>
            <value>
                <fullName>Would consider if no other options</fullName>
                <isActive>false</isActive>
                <label>Would consider if no other options</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>