force-app/main/default/objects/Opportunity/fields/Opportunity_Status_List_View__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_List_View__c</fullName>
    <description>Used for updating status on a list view. Do not use for reporting.</description>
    <label>Opportunity Status (List View)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Check Completed (PASS)</fullName>
            </value>
            <value>
                <fullName>Background Check Completed (FAIL)</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Background Check Initiated</fullName>
                <isActive>false</isActive>
                <label>Background Check Initiated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>