force-app/main/default/objects/Opportunity/fields/Original_Opportunity_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Lead_Source__c</fullName>
    <formula>TEXT(  Original_Opportunity__r.LeadSource )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Opportunity Lead Source</label>
    <type>Text</type>
</CustomField>