force-app/main/default/objects/Opportunity/fields/Original_Opportunity_Source_Department__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Source_Department__c</fullName>
    <formula>TEXT(  Original_Opportunity__r.Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Opportunity Source Department</label>
    <type>Text</type>
</CustomField>