force-app/main/default/objects/Opportunity/fields/Original_Opportunity_Source_Division__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_Source_Division__c</fullName>
    <formula>TEXT( Original_Opportunity__r.Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Opportunity Source Division</label>
    <type>Text</type>
</CustomField>