force-app/main/default/objects/Opportunity/fields/Overall_interest_in_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Overall_interest_in_opportunity__c</fullName>
    <description>i.e., likeliness of accepting the position</description>
    <inlineHelpText>i.e., likeliness of accepting the position</inlineHelpText>
    <label>Overall interest in opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>