force-app/main/default/objects/Opportunity/fields/Owner_Workday_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Owner_Workday_Cost_Center__c</fullName>
    <formula>Owner.Workday_Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Workday Cost Center</label>
    <type>Text</type>
</CustomField>