force-app/main/default/objects/Opportunity/fields/Payment_Term_Counter__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Counter__c</fullName>
    <formula>((YEAR(Contract_End_Date__c) - YEAR(Contract_Start_Date__c))*12) + (MONTH(Contract_End_Date__c) - MONTH(Contract_Start_Date__c))+ 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>