force-app/main/default/objects/Opportunity/fields/Payment_Term_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Details__c</fullName>
    <description>Used to capture any extra details on the payment terms and additional notes</description>
    <label>Payment Term Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>