force-app/main/default/objects/Opportunity/fields/Payment_Term_Flow__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used by admins to reset opportunity payment terms</description>
    <label>Payment Term Flow</label>
    <type>Checkbox</type>
</CustomField>