force-app/main/default/objects/Opportunity/fields/PCID__c.field-meta.xml
<CustomField>
    <fullName>PCID__c</fullName>
    <formula>Contact__r.PCID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCID#</label>
    <type>Text</type>
</CustomField>