force-app/main/default/objects/Opportunity/fields/Performance_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Date__c</fullName>
    <description>Date used to track both speaking and performance of artist/talent client on opportunity</description>
    <inlineHelpText>Enter date of expected performance for talent/client engagement.</inlineHelpText>
    <label>Performance Date</label>
    <type>Date</type>
</CustomField>