force-app/main/default/objects/Opportunity/fields/PreContract_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>PreContract_Sent_Date__c</fullName>
    <label>Pre-Contract Sent Date</label>
    <type>Date</type>
</CustomField>