force-app/main/default/objects/Opportunity/fields/PreContract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>PreContract_Signed_Date__c</fullName>
    <label>Pre-Contract Signed Date</label>
    <type>Date</type>
</CustomField>