force-app/main/default/objects/Opportunity/fields/PriceBook_Name__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_Name__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBook Name</label>
    <type>Text</type>
</CustomField>