force-app/main/default/objects/Opportunity/fields/Prior_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Revenue__c</fullName>
    <label>Prior Year Contracted</label>
    <summarizedField>OpportunityLineItem.Prior_Year_Sum__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>