force-app/main/default/objects/Opportunity/fields/Product_Brand_Retainers_US__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand_Retainers_US__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Brand Retainers US</label>
    <type>Checkbox</type>
</CustomField>