force-app/main/default/objects/Opportunity/fields/Product_Brands_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Product_Brands_Corporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Brands Corporate</label>
    <type>Checkbox</type>
</CustomField>