force-app/main/default/objects/Opportunity/fields/Product_Brands_Middle_East__c.field-meta.xml
<CustomField>
    <fullName>Product_Brands_Middle_East__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Brands Middle East</label>
    <type>Checkbox</type>
</CustomField>