force-app/main/default/objects/Opportunity/fields/Product_Brands_Properties_US__c.field-meta.xml
<CustomField>
    <fullName>Product_Brands_Properties_US__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Brands &amp; Properties US</label>
    <type>Checkbox</type>
</CustomField>