force-app/main/default/objects/Opportunity/fields/Product_Canada__c.field-meta.xml
<CustomField>
    <fullName>Product_Canada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Canada</label>
    <type>Checkbox</type>
</CustomField>