force-app/main/default/objects/Opportunity/fields/Product_Counter__c.field-meta.xml
<CustomField>
    <fullName>Product_Counter__c</fullName>
    <description>OBSOLETE. DO NOT USE THSI FIELD. This field will eventually be deleted 
Instead use Opportunity_Product_Count__c</description>
    <label>Product Counter</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>