force-app/main/default/objects/Opportunity/fields/Product_CY_Lost_Declined__c.field-meta.xml
<CustomField>
    <fullName>Product_CY_Lost_Declined__c</fullName>
    <description>Revenue forecasted this year on lost opportunity</description>
    <label>Current Year Lost/Declined</label>
    <summarizedField>OpportunityLineItem.Product_CY_Omitted__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_CY_Omitted__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>