force-app/main/default/objects/Opportunity/fields/Product_Experiential_UK__c.field-meta.xml
<CustomField>
    <fullName>Product_Experiential_UK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Experiential UK</label>
    <type>Checkbox</type>
</CustomField>