force-app/main/default/objects/Opportunity/fields/Product_Guide__c.field-meta.xml
<CustomField>
    <fullName>Product_Guide__c</fullName>
    <formula>HYPERLINK(&quot;https://teamwass.app.box.com/file/646407606369&quot;, &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Guide</label>
    <type>Text</type>
</CustomField>