force-app/main/default/objects/Opportunity/fields/Product_LS_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Product_LS_Cycle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - LS / Cycle</label>
    <type>Checkbox</type>
</CustomField>