force-app/main/default/objects/Opportunity/fields/Product_Mexico__c.field-meta.xml
<CustomField>
    <fullName>Product_Mexico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Mexico</label>
    <type>Checkbox</type>
</CustomField>