force-app/main/default/objects/Opportunity/fields/Product_Properties_US_Raleigh__c.field-meta.xml
<CustomField>
    <fullName>Product_Properties_US_Raleigh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Properties US - Raleigh</label>
    <type>Checkbox</type>
</CustomField>