force-app/main/default/objects/Opportunity/fields/Product_The_Collective__c.field-meta.xml
<CustomField>
    <fullName>Product_The_Collective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - The Collective</label>
    <type>Checkbox</type>
</CustomField>