force-app/main/default/objects/Opportunity/fields/Production__c.field-meta.xml
<CustomField>
    <fullName>Production__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Production will be needed on this opportunity</description>
    <inlineHelpText>Select if Production team is needed based on campaign objectives</inlineHelpText>
    <label>Production</label>
    <type>Checkbox</type>
</CustomField>