force-app/main/default/objects/Opportunity/fields/Production_Type__c.field-meta.xml
<CustomField>
    <fullName>Production_Type__c</fullName>
    <label>Production Type</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>