force-app/main/default/objects/Opportunity/fields/Professionalism__c.field-meta.xml
<CustomField>
    <fullName>Professionalism__c</fullName>
    <description>i.e., preparedness, asked questions, adequate interview environment/attire</description>
    <inlineHelpText>i.e., preparedness, asked questions, adequate interview environment/attire</inlineHelpText>
    <label>Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>