force-app/main/default/objects/Opportunity/fields/Program_DocuSign_Fields_Filled__c.field-meta.xml
<CustomField>
    <fullName>Program_DocuSign_Fields_Filled__c</fullName>
    <formula>AND(
 NOT(ISBLANK( Account_Program__r.Program__r.Program_of_Weekly_Hours__c)),
 NOT(ISBLANK(Account_Program__r.Program__r.Program_of_Weeks__c)),
 NOT(ISBLANK(Account_Program__r.Program__r.Hourly_Rate__c)), 
 NOT(ISBLANK(Account_Program__r.Program__r.Total_Fee__c)), 
 NOT(ISPICKVAL( Account_Program__r.Program__r.Semester__c, &quot;&quot; )) 
 
)</formula>
    <label>Program DocuSign Fields Filled</label>
    <type>Checkbox</type>
</CustomField>